--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bevy = "0.17.0"
 bevy_animation_graph = { git = "https://github.com/mbrea-c/bevy_animation_graph", branch = "0.9-uat-bugfixes" }
